surreal-orm-tests/tests/snapshots/test_query_builder__tests__multiplication_tests2.snap
---
source: surreal-macros/tests/test_query_builder.rs
expression: m
---
[
    Binding {
        param: "_param_00000000",
        value: Thing(
            Thing {
                tb: "book",
                id: String(
                    "blaze",
                ),
            },
        ),
        original_inline_name: "_param_00000000",
        raw_string: "book:blaze",
        description: None,
    },
]
