surreal-orm-tests/tests/snapshots/test_query_builder__tests__should_display_actual_values_in_raw_and_params_in_mock-2.snap
---
source: surreal-macros/tests/test_query_builder.rs
expression: x.get_bindings()
---
[
    Binding {
        param: "student:1",
        value: Thing(
            Thing {
                tb: "student",
                id: Number(
                    1,
                ),
            },
        ),
        original_inline_name: "student:1",
        raw_string: "student:1",
        description: None,
    },
    Binding {
        param: "book:2",
        value: Thing(
            Thing {
                tb: "book",
                id: Number(
                    2,
                ),
            },
        ),
        original_inline_name: "book:2",
        raw_string: "book:2",
        description: None,
    },
    Binding {
        param: "{ timeWritten: ⟨12⟩:0 }",
        value: Object(
            Object(
                {
                    "timeWritten": Thing(
                        Thing {
                            tb: "12",
                            id: Number(
                                0,
                            ),
                        },
                    ),
                },
            ),
        ),
        original_inline_name: "{ timeWritten: ⟨12⟩:0 }",
        raw_string: "{ timeWritten: ⟨12⟩:0 }",
        description: None,
    },
]
