surreal-orm-tests/tests/snapshots/test_query_builder__tests__should_display_actual_values_in_raw_and_params_in_mock.snap
---
source: surreal-macros/tests/test_query_builder.rs
expression: x
---
RELATE student:1->writes->book:2 CONTENT $_param_00000000 RETURN BEFORE PARALLEL ;
